# anycms-spa

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  justfile
examples/actix-gzip-example/: Cargo.toml
examples/actix-gzip-example/assets/: index.html
examples/actix-gzip-example/assets/css/: style.css
examples/actix-gzip-example/assets/js/: app.js
examples/actix-gzip-example/src/: main.rs
examples/actix-spa-example/: Cargo.toml
examples/actix-spa-example/src/: main.rs
examples/axum-compression-example/: Cargo.toml
examples/axum-compression-example/assets/: 404.html  index.html
examples/axum-compression-example/assets/css/: style.css
examples/axum-compression-example/assets/js/: app.js
examples/axum-compression-example/src/: main.rs
examples/axum-override-example/: Cargo.toml
examples/axum-override-example/assets/: index.html
examples/axum-override-example/assets/css/: style.css
examples/axum-override-example/assets/images/: new-logo.txt
examples/axum-override-example/assets/js/: app.js
examples/axum-override-example/src/: main.rs
examples/axum-spa-example/: Cargo.toml
examples/axum-spa-example/assets/: index.html
examples/axum-spa-example/src/: main.rs
examples/salvo-spa-example/: Cargo.toml
examples/salvo-spa-example/src/: main.rs
src/: lib.rs
src/actix/: mod.rs
src/axum/: mod.rs
src/core/: mod.rs  path.rs
src/salvo/: mod.rs
tests-assets/: test.txt
