[package]
name = "anycms-spa"
version = "0.2.0"
edition = "2024"

authors = ["Liangdi<wu@liangid.me>"]
description = "SPA intergration with Web Frameworks"
keywords = ["anycms","spa","actix-web","axum"]
homepage = "https://anycms.org"
repository = "https://github.com/anycms/anycms-spa"
license = "MIT"

[dependencies]
actix-web = {version = "4.11.0",optional = true}
axum = {version = "0.8.4",optional = true}
mime_guess = "2.0.5"
paste = "1.0.15"
regex = "1.11.1"
rust-embed = "8.7.2"
thiserror = "2.0.12"
tracing = "0.1.41"

[features]
default = []
actix = ["dep:actix-web"]
axum = ["dep:axum"]
