[package]
name = "anycms-spa"
version = "0.2.1"
edition = "2024"

authors = ["Liangdi<wu@liangid.me>"]
description = "SPA integration with Web Frameworks"
keywords = ["anycms","spa","actix-web","axum"]
homepage = "https://anycms.org"
repository = "https://github.com/anycms/anycms-spa"
license = "MIT"

[dependencies]
actix-web = {version = "4.12.1",optional = true}
axum = {version = "0.8.8",optional = true}
mime_guess = "2.0.5"
paste = "1.0.15"
rust-embed = "8.9.0"
thiserror = "2.0.17"
tracing = "0.1.44"

[features]
default = []
actix = ["dep:actix-web"]
axum = ["dep:axum"]
