[package]
name = "actix-spa-example"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

anycms-spa = { path = "../../" }
anyhow = "1.0.98"
rust-embed = "8.7.2"
paste = "1.0.15"
